supervised learning notebook updates

--- a/020_SupervisedLearning/Supervised_Learning.ipynb
+++ b/020_SupervisedLearning/Supervised_Learning.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/RiverGumSecurity/AILabs/blob/main/020_SupervisedLearning/Supervised_Learning.ipynb\" target=\"_new\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Supervised Learning with Phishing Email Data\n",
     "\n",
     "This notebook explores core concepts and and provides examples of machine learning.  We will use phishing emails as a dataset and compare statistcal learning methods, such as Logistic Regression, Support Vector Machines, Decision Trees "
@@ -39,6 +32,7 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "#from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings"
@@ -217,15 +211,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(type(tf))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,7 +233,7 @@
    "source": [
     "## Logistic Regression\n",
     "\n",
-    "Now that we have split our data into traning and validation sets, we are ready for our first machine learning model that will be able to tell if an email is phishing or not based on the text of the email.  The first model we will explore is Logistic Regression.\n",
+    "Now that we have split our data into traning and validation sets, we are ready for our first machine learning model that will be able to tell if an email is phishing or not based on the text of the email.  The first model we will explore is the SciKit implementation of [Logistic Regression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html).\n",
     "\n",
     "Logistic regression is a statistical method used for binary classification, where the goal is to predict the probability that a given input belongs to one of two categories. It models the relationship between a dependent binary variable and one or more independent variables using the logistic function, producing an output between 0 and 1. This output can then be thresholded to classify the input into one of the two categories.\n",
     "\n",
@@ -256,8 +241,7 @@
     "\n",
     "https://www.youtube.com/watch?v=yIYKR4sgzI8\n",
     "\n",
-    "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html\n"
+    "\n"
    ]
   },
   {
@@ -266,6 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fit data to model\n",
     "lg = LogisticRegression()\n",
     "lg.fit(X_tr,y_tr)\n",
     "\n",
@@ -276,7 +261,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Confusion Matrix\n",
+    "### Metrics Explanation\n",
+    "\n",
+    "**Confusion Matrix**\n",
+    "\n",
+    "A confusion matrix is a tabular representation of the performance of a classification model, summarizing the predictions it made against the actual labels. It consists of four key values—True Positives, True Negatives, False Positives, and False Negatives—providing insight into the model’s accuracy, precision, recall, and other metrics.\n",
     "\n",
     "- upper left - number of emails predicted to be phishing and are actually phishing (True Positive)\n",
     "\n",
@@ -284,7 +273,42 @@
     "\n",
     "- lower left - number emails predicted to be phishing that are actually not phishing (False Negative)\n",
     "\n",
-    "- lower right - number of emails predicted ast not phishing that are actually not phishing (True Negative)"
+    "- lower right - number of emails predicted ast not phishing that are actually not phishing (True Negative)\n",
+    "\n",
+    "**Accuracy**\n",
+    "\n",
+    "Accuracy measures the proportion of correctly classified instances (both true positives and true negatives) out of the total number of instances. It provides a simple metric to evaluate a classification model's performance, especially when the dataset is balanced.\n",
+    "\n",
+    "$$\n",
+    "\\text{Accuracy} = \\frac{\\text{True Positives (TP)} + \\text{True Negatives (TN)}}{\\text{Total Instances (TP + TN + FP + FN)}}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Precision**  \n",
+    "Precision measures the proportion of correctly predicted positive instances out of all instances predicted as positive. It evaluates how precise or accurate the positive predictions are:  \n",
+    "\n",
+    "$$\n",
+    "\\text{Precision} = \\frac{\\text{True Positives (TP)}}{\\text{True Positives (TP)} + \\text{False Positives (FP)}}\n",
+    "$$\n",
+    "\n",
+    "**Recall**  \n",
+    "Recall (also called sensitivity or true positive rate) measures the proportion of actual positive instances that were correctly predicted by the model. It reflects the model’s ability to identify positive cases:  \n",
+    "\n",
+    "$$\n",
+    "\\text{Recall} = \\frac{\\text{True Positives (TP)}}{\\text{True Positives (TP)} + \\text{False Negatives (FN)}}\n",
+    "$$\n",
+    "\n",
+    "**F1-Score**  \n",
+    "The F1-score is the harmonic mean of precision and recall, providing a balanced metric that considers both false positives and false negatives. It is particularly useful when there is an imbalance between classes:  \n",
+    "\n",
+    "$$\n",
+    "\\text{F1-Score} = 2 \\cdot \\frac{\\text{Precision} \\cdot \\text{Recall}}{\\text{Precision} + \\text{Recall}}\n",
+    "$$\n",
+    "\n",
+    "**Support**  \n",
+    "Support refers to the number of actual occurrences of each class in the dataset. It provides context for the performance metrics by showing how many instances were used to calculate them.  \n"
    ]
   },
   {
@@ -293,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Caclulate the accuracy and the f1 score of the Logistic Regression model.\n",
+    "# Caclulate metrics Logistic Regression model.\n",
     "\n",
     "lr_accu = accuracy_score(y_tst,pred_lg)*100\n",
     "lr_f1 = f1_score(y_tst,pred_lg)*100\n",
@@ -312,21 +336,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### Support Vector Machine\n",
-    "https://scikit-learn.org/stable/modules/svm.html#classification"
+    "### Support Vector Machine (SVM)\n",
+    "\n",
+    "A [**Support Vector Machine (SVM)**](https://scikit-learn.org/stable/modules/svm.html#classification) is a supervised learning algorithm that is particularly effective for binary classification tasks. SVM works by finding the optimal hyperplane that best separates the data into two classes. The algorithm seeks to maximize the margin, which is the distance between the hyperplane and the nearest data points from each class, known as **support vectors**. This maximization improves the model's ability to generalize to unseen data. For non-linearly separable data, SVM uses a technique called the **kernel trick** to transform the input data into a higher-dimensional space, making it possible to find a linear separation. SVM is well-suited for text classification problems, as it performs effectively in high-dimensional spaces like those generated by text features (e.g., word frequencies or TF-IDF vectors).\n"
    ]
   },
   {
@@ -335,6 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#fit data to model\n",
     "svm = LinearSVC()\n",
     "svm.fit(X_tr,y_tr)\n",
     "\n",
@@ -347,6 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Caclulate metrics Logistic Regression model.\n",
     "svm_accu = accuracy_score(y_tst,pred_svm)*100\n",
     "svm_f1 = f1_score(y_tst,pred_svm)*100\n",
     "\n",
@@ -366,8 +381,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multinomial Naive Bayes \n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.MultinomialNB.html#:~:text=The%20multinomial%20Naive%20Bayes%20classifier,tf%2Didf%20may%20also%20work."
+    "## Multinomial Naive Bayes\n",
+    "\n",
+    "[**Multinomial Naive Bayes**](https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.MultinomialNB.html#:~:text=The%20multinomial%20Naive%20Bayes%20classifier,tf%2Didf%20may%20also%20work.) is a probabilistic algorithm commonly used for text classification tasks. It is based on [**Bayes' Theorem**](https://www.youtube.com/watch?app=desktop&v=9wCnvr7Xw4E&t=0s), which calculates the posterior probability of a class given the observed features. The \"multinomial\" aspect refers to the assumption that the features (e.g., word counts or term frequencies) follow a multinomial distribution. Multinomial Naive Bayes works by estimating the likelihood of each word in the vocabulary given a class and combining these probabilities to classify the text. It assumes conditional independence between features, which simplifies computation and allows it to perform well on large datasets. This algorithm is particularly effective in applications with discrete features, making it a popular choice for email filtering and other text-based classification tasks.\n"
    ]
   },
   {
@@ -376,6 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#fit data to model\n",
     "nb = MultinomialNB()\n",
     "nb.fit(X_tr,y_tr)"
    ]
@@ -386,7 +403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# calculate metrics\n",
     "pred_nb = nb.predict(X_tst)\n",
     "nb_accu = accuracy_score(y_tst,pred_nb)*100\n",
     "nb_f1 = f1_score(y_tst,pred_nb)*100\n",
@@ -414,17 +431,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Decision Tree"
+    "### Decision Tree\n",
+    "\n",
+    "A [**Decision Tree**](https://scikit-learn.org/1.5/modules/tree.html) is a supervised learning algorithm that is commonly used for both classification and regression tasks. For a spam vs. ham classification problem, the decision tree works by recursively splitting the dataset based on feature values to create a tree-like structure of decisions. Each internal node in the tree represents a feature test (e.g., \"Does the email contain the word 'free'?\"), each branch represents the outcome of the test, and each leaf node represents the predicted class (spam or ham). The splits are chosen to maximize the homogeneity of the data within each subset, often using metrics like **Gini Impurity** or **Information Gain**. Decision trees are intuitive, easy to visualize, and handle both numerical and categorical data, making them a strong baseline algorithm for text classification tasks like email filtering.\n"
    ]
   },
   {
@@ -433,6 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fit data to model\n",
     "dt=DecisionTreeClassifier()\n",
     "dt.fit(X_tr,y_tr)"
    ]
@@ -443,6 +456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# calculate metrics\n",
     "pred_dt = dt.predict(X_tst)\n",
     "dt_accu = accuracy_score(y_tst,pred_dt)*100\n",
     "dt_f1 = f1_score(y_tst,pred_dt)*100\n",
@@ -459,12 +473,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Random Forest\n"
+    "### Random Forest\n",
+    "\n",
+    "A [**Random Forest**](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html) is an ensemble learning algorithm that combines multiple decision trees to improve classification accuracy and reduce the risk of overfitting. In the context of classifying emails as spam or ham, the algorithm builds multiple decision trees during training, with each tree trained on a random subset of the data and features. The final prediction is determined by aggregating the predictions of all the trees, often through majority voting. This randomness in both data and features introduces diversity among the trees, making the model more robust to noise and better at generalizing to unseen data. Random Forests are particularly effective for high-dimensional datasets like text classification, as they can handle the complexities of features like word frequencies or TF-IDF scores while maintaining good performance and interpretability.\n"
    ]
   },
   {
@@ -512,7 +526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Need to do - set up table of models and comparisons\n",
+    "#table of models and comparisons\n",
     "\n",
     "accu_values = [lr_accu,svm_accu,nb_accu,dt_accu,rf_accu]\n",
     "row_labels = [\"Logistic Regression\", \"SVM\", \"Naive Bayes\",\"Decision Tree\",\"Random Forest\"]\n",
@@ -523,7 +537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ai",
    "language": "python",
    "name": "python3"
   },
@@ -537,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
