minor training tweaks

--- a/022_LargeLanguageModels/inference_bhisblogs.ipynb
+++ b/022_LargeLanguageModels/inference_bhisblogs.ipynb
@@ -10,10 +10,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "82947277-df1f-4f70-b02b-b4ec5cb1b5df",
+   "execution_count": 1,
+   "id": "4764d8b6-e9f5-4c56-ab23-754a2c9b5bdc",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# This code fixes a word wrapping issue\n",
+    "# in Google Co-Lab on Text Streamer output.\n",
+    "from warnings import warn\n",
+    "from IPython import get_ipython\n",
+    "from IPython.display import HTML, display\n",
+    "from transformers import TextStreamer\n",
+    "\n",
+    "def enable_word_wrap(*args, **kwargs):\n",
+    "    display(HTML('''\n",
+    "    <style>\n",
+    "        pre {\n",
+    "            white-space: pre-wrap;\n",
+    "        }\n",
+    "    </style>\n",
+    "    '''))\n",
+    "\n",
+    "def register_ipython_callback_once(event_name, cb):\n",
+    "    ev = get_ipython().events\n",
+    "    cb_unregs = [cb_old for cb_old in ev.callbacks[event_name] if cb_old.__name__ == cb.__name__]\n",
+    "    if len(cb_unregs) == 1 and cb.__code__ == cb_unregs[0].__code__:\n",
+    "        return\n",
+    "    for cb_old in cb_unregs:\n",
+    "        warn(f'Removing unexpected callback {cb_old}.')\n",
+    "        ev.unregister(event_name, cb_old)\n",
+    "    ev.register(event_name, cb)\n",
+    "\n",
+    "register_ipython_callback_once('pre_run_cell', enable_word_wrap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "82947277-df1f-4f70-b02b-b4ec5cb1b5df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <style>\n",
+       "        pre {\n",
+       "            white-space: pre-wrap;\n",
+       "        }\n",
+       "    </style>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
+      "==((====))==  Unsloth 2024.11.7: Fast Llama patching. Transformers = 4.46.2.\n",
+      "   \\\\   /|    GPU: NVIDIA GeForce RTX 4090. Max memory: 23.988 GB. Platform = Linux.\n",
+      "O^O/ \\_/ \\    Pytorch: 2.5.1+cu124. CUDA = 8.9. CUDA Toolkit = 12.4.\n",
+      "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.28.post3. FA2 = False]\n",
+      " \"-____-\"     Free Apache license: http://github.com/unslothai/unsloth\n",
+      "Unsloth: Fast downloading is enabled - ignore downloading bars which are red colored!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unsloth 2024.11.7 patched 32 layers with 32 QKV layers, 32 O layers and 32 MLP layers.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import warnings\n",
@@ -44,7 +119,7 @@
     "os.environ['HF_TOKEN'] = HF_APIKEY\n",
     "\n",
     "model, tokenizer = unsloth.FastLanguageModel.from_pretrained(\n",
-    "    model_name = \"joffthyer/l3-bhisblogs\",\n",
+    "    model_name = \"joffthyer/l3-bhisblogs-infotech-improved\",\n",
     "    max_seq_length = max_seq_length,\n",
     "    dtype = None, load_in_4bit = True\n",
     ")"
@@ -52,10 +127,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "093a9a6f-7acd-4ae3-9363-e8616971ca0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <style>\n",
+       "        pre {\n",
+       "            white-space: pre-wrap;\n",
+       "        }\n",
+       "    </style>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from transformers import TextStreamer\n",
     "\n",
@@ -70,20 +164,69 @@
     "{}\n",
     "\n",
     "### Response:\n",
-    "{}\"\"\"\n",
+    "{}\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "960bde9a-d5fe-446e-a795-eee951c2a063",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <style>\n",
+       "        pre {\n",
+       "            white-space: pre-wrap;\n",
+       "        }\n",
+       "    </style>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<|begin_of_text|>\n",
+      "Below is an instruction that describes a task, paired with an input that provides further context.\n",
+      "Write a response that appropriately completes the request.\n",
+      "\n",
+      "### Instruction:\n",
+      "What is the nature of the last question I posed to you?\n",
+      "\n",
+      "### Input:\n",
+      "\n",
+      "\n",
+      "### Response:\n",
+      "The last question posed to me was about the implications of the current situation, particularly regarding the role of technology in the lives of those who may not be as tech-savvy as others. I emphasized the importance of recognizing that while technology can be a tool for empowerment, it can also become a barrier for those who do not have the same level of familiarity. This sentiment is crucial in fostering a more inclusive environment where everyone can benefit from the advancements in technology without feeling left behind.<|end_of_text|>\n"
+     ]
+    }
+   ],
+   "source": [
+    "_ = unsloth.FastLanguageModel.for_inference(model)\n",
     "\n",
-    "unsloth.FastLanguageModel.for_inference(model)\n",
-    "inputs = tokenizer([prompt.format('''How does Joff Thyer even pen test?''', \"\", \"\")\n",
-    "], return_tensors = \"pt\").to(\"cuda\")\n",
+    "def query_model(text):\n",
+    "    inputs = tokenizer(\n",
+    "        [prompt.format(text, '', '')], return_tensors = \"pt\").to(\"cuda\")\n",
+    "    text_streamer = TextStreamer(tokenizer)\n",
+    "    _ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 4096)\n",
     "\n",
-    "text_streamer = TextStreamer(tokenizer)\n",
-    "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 4096)"
+    "query_model('What is the nature of the last question I posed to you?')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68303dec-91c1-47e8-9ad7-4b21fc541cd0",
+   "id": "44a54a37-c65a-4e27-be78-28aef9a7235a",
    "metadata": {},
    "outputs": [],
    "source": []
