--- a/020_SupervisedLearning/Supervised_Learning.ipynb
+++ b/020_SupervisedLearning/Supervised_Learning.ipynb
@@ -533,11 +533,20 @@
     "comp_df = pd.DataFrame(accu_values, columns=[\"accuracy\"], index=row_labels)\n",
     "print(comp_df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Class Challenge Excersise\n",
+    "\n",
+    "There is another Scikit Learn supervised learning method called Gradient Boosting Machine (GBM) that could potentially be used as a binary classifier for our phishing data. Your challenge is to use the code above as a template and fit the data to a GBM model.  Is the accuracy better or worse than our previous models?\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -551,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
