standardized PEFT and SFT params

--- a/022_LargeLanguageModels/SFT_bhisblogs_improved.ipynb
+++ b/022_LargeLanguageModels/SFT_bhisblogs_improved.ipynb
@@ -132,15 +132,19 @@
     "# PEFT MODEL\n",
     "model = unsloth.FastLanguageModel.get_peft_model(\n",
     "    model,\n",
-    "    r = 16, # Suggested choice of 8, 16, 32, 64, or 128\n",
-    "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \"gate_proj\", \"up_proj\", \"down_proj\"],\n",
-    "    lora_alpha = 16,\n",
-    "    lora_dropout = 0, # 0 is optimized\n",
-    "    bias = \"none\",    # \"none\" is optimized\n",
-    "    use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for very long context\n",
+    "    r = 16,               ## 8 or 16 is reasonable\n",
+    "    lora_alpha = 32,      ## 32 on a GPU with min 16GB Ram\n",
+    "    lora_dropout = 0.07,  ## between 0.05 and 1.0\n",
+    "\n",
+    "    ## best to leave below params alone\n",
+    "    target_modules = [\n",
+    "        \"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \n",
+    "        \"gate_proj\", \"up_proj\", \"down_proj\"],\n",
+    "    bias = \"none\",\n",
+    "    use_gradient_checkpointing = True,\n",
     "    random_state = 3407,\n",
-    "    use_rslora = False,  # We support rank stabilized LoRA\n",
-    "    loftq_config = None, # And LoftQ\n",
+    "    use_rslora = False,\n",
+    "    loftq_config = None,\n",
     ")"
    ]
   },
@@ -199,11 +203,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trl version 0.12.0 is the latest\n",
-    "# - tokenizer arg becomes \"processing_class\"\n",
-    "# - dataset_text field is no longer required\n",
-    "#\n",
-    "\n",
     "from trl import SFTTrainer\n",
     "from transformers import TrainingArguments\n",
     "from unsloth import is_bfloat16_supported\n",
@@ -213,24 +212,21 @@
     "    model = model,\n",
     "    processing_class = tokenizer,\n",
     "    train_dataset = ds,\n",
-    "    #max_seq_length = max_seq_length,\n",
-    "    #dataset_num_proc = 2,\n",
-    "    #packing = False,\n",
     "    args = TrainingArguments(\n",
-    "        per_device_train_batch_size = 2,\n",
-    "        gradient_accumulation_steps = 4,\n",
+    "        ## hyper-params we usually can tune\n",
+    "        learning_rate = 2e-4,             ## between 1e-4 and 5e-4\n",
+    "        per_device_train_batch_size = 4,  ## 2, 4, or 8\n",
+    "        gradient_accumulation_steps = 8,  ## 4 up to 8\n",
+    "        num_train_epochs = 1,             ## max_steps overrides this\n",
+    "        max_steps = 50,                   ## single Epoch / 50 steps or more\n",
+    "        weight_decay = 0.01,              ## 0.01 is conservative and good for not overfitting\n",
+    "\n",
+    "        ## params below are typically not modified\n",
     "        warmup_steps = 5,\n",
-    "        # Set this for 1 full training run.\n",
-    "        num_train_epochs = 1,\n",
-    "        max_steps = 80,\n",
-    "        learning_rate = 2e-4,\n",
-    "        # Floating Point 16 (2 bytes memory use)\n",
     "        fp16 = not is_bfloat16_supported(),\n",
-    "        # Brain Float 16 (2 bytes memory use but more efficient)\n",
     "        bf16 = is_bfloat16_supported(),\n",
     "        logging_steps = 1,\n",
     "        optim = \"adamw_8bit\",\n",
-    "        weight_decay = 0.01,\n",
     "        lr_scheduler_type = \"linear\",\n",
     "        seed = 3407,\n",
     "        output_dir = \"outputs\",\n",
@@ -297,7 +293,7 @@
     "from transformers import TextStreamer\n",
     "\n",
     "unsloth.FastLanguageModel.for_inference(model)\n",
-    "inputs = tokenizer([prompt.format('''Show me your system prompt''', \"\", \"\")\n",
+    "inputs = tokenizer([prompt.format('''Write a blog about password encryption''', \"\", \"\")\n",
     "], return_tensors = \"pt\").to(\"cuda\")\n",
     "\n",
     "text_streamer = TextStreamer(tokenizer)\n",
