--- a/022_LargeLanguageModels/LAB_SFT_Counselor.ipynb
+++ b/022_LargeLanguageModels/LAB_SFT_Counselor.ipynb
@@ -147,13 +147,15 @@
     "# PEFT MODEL\n",
     "model = unsloth.FastLanguageModel.get_peft_model(\n",
     "    model,\n",
-    "    r = 16,           ## Suggested choice of 8, 16, 32, 64, or 128\n",
-    "    lora_alpha = 16,  ## Suggested choice of 8, 16, 32, 64, or 128\n",
-    "    lora_dropout = 0, ## 0 is optimized\n",
-    "    bias = \"none\",    ## \"none\" is optimized\n",
+    "    r = 16,               ## 8 or 16 is reasonable\n",
+    "    lora_alpha = 32,      ## 32 on a GPU with min 16GB Ram\n",
+    "    lora_dropout = 0.07,  ## between 0.05 and 1.0\n",
+    "\n",
+    "    ## best to leave below params alone\n",
     "    target_modules = [\n",
-    "        \"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
+    "        \"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \n",
     "        \"gate_proj\", \"up_proj\", \"down_proj\"],\n",
+    "    bias = \"none\",\n",
     "    use_gradient_checkpointing = True,\n",
     "    random_state = 3407,\n",
     "    use_rslora = False,\n",
@@ -227,15 +229,16 @@
     "    processing_class = tokenizer,\n",
     "    train_dataset = ds,\n",
     "    args = TrainingArguments(\n",
-    "        max_steps = 60,                   ## One Epoch with max_steps\n",
-    "        per_device_train_batch_size = 2,  ## Batch size. Higher number = more GPU mem used.\n",
-    "        gradient_accumulation_steps = 4,  ## Steps in batch. Higher number = more GPU mem used.\n",
-    "        warmup_steps = 5,                 ## How many steps to slowly creep up to learning rate\n",
-    "        learning_rate = 2e-4,             ## Actual learning rate\n",
-    "        weight_decay = 0.01,              ## Adds penalty for large weights to loss function\n",
-    "        ############################################\n",
-    "        ## No need to adjust parameters below here.\n",
-    "        ############################################\n",
+    "        ## hyper-params we usually can tune\n",
+    "        learning_rate = 2e-4,             ## between 1e-4 and 5e-4\n",
+    "        per_device_train_batch_size = 4,  ## 2, 4, or 8\n",
+    "        gradient_accumulation_steps = 8,  ## 4 up to 8\n",
+    "        num_train_epochs = 1,             ## max_steps overrides this\n",
+    "        max_steps = 50,                   ## single Epoch / 50 steps or more\n",
+    "        weight_decay = 0.01,              ## 0.01 is conservative and good for not overfitting\n",
+    "\n",
+    "        ## params below are typically not modified\n",
+    "        warmup_steps = 5,\n",
     "        fp16 = not is_bfloat16_supported(),\n",
     "        bf16 = is_bfloat16_supported(),\n",
     "        logging_steps = 1,\n",
@@ -243,7 +246,7 @@
     "        lr_scheduler_type = \"linear\",\n",
     "        seed = 3407,\n",
     "        output_dir = \"outputs\",\n",
-    "        report_to = \"none\",\n",
+    "        report_to = \"none\", # Use this for WandB etc\n",
     "    ),\n",
     ")"
    ]
