--- a/022_LargeLanguageModels/SFT_bhisblogs_infotech_improved.ipynb
+++ b/022_LargeLanguageModels/SFT_bhisblogs_infotech_improved.ipynb
@@ -141,11 +141,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trl version 0.12.0 is the latest\n",
-    "# - tokenizer arg becomes \"processing_class\"\n",
-    "# - dataset_text field is no longer required\n",
-    "#\n",
-    "\n",
     "from trl import SFTTrainer\n",
     "from transformers import TrainingArguments\n",
     "from unsloth import is_bfloat16_supported\n",
@@ -155,24 +150,21 @@
     "    model = model,\n",
     "    processing_class = tokenizer,\n",
     "    train_dataset = ds,\n",
-    "    #max_seq_length = max_seq_length,\n",
-    "    #dataset_num_proc = 2,\n",
-    "    #packing = False,\n",
     "    args = TrainingArguments(\n",
-    "        per_device_train_batch_size = 2,\n",
-    "        gradient_accumulation_steps = 4,\n",
+    "        ## hyper-params we usually can tune\n",
+    "        learning_rate = 2e-4,             ## between 1e-4 and 5e-4\n",
+    "        per_device_train_batch_size = 4,  ## 2, 4, or 8\n",
+    "        gradient_accumulation_steps = 8,  ## 4 up to 8\n",
+    "        num_train_epochs = 1,             ## max_steps overrides this\n",
+    "        max_steps = 50,                   ## single Epoch / 50 steps or more\n",
+    "        weight_decay = 0.01,              ## 0.01 is conservative and good for not overfitting\n",
+    "\n",
+    "        ## params below are typically not modified\n",
     "        warmup_steps = 5,\n",
-    "        # Set this for 1 full training run.\n",
-    "        num_train_epochs = 1,\n",
-    "        max_steps = 200,\n",
-    "        learning_rate = 2e-4,\n",
-    "        # Floating Point 16 (2 bytes memory use)\n",
     "        fp16 = not is_bfloat16_supported(),\n",
-    "        # Brain Float 16 (2 bytes memory use but more efficient)\n",
     "        bf16 = is_bfloat16_supported(),\n",
     "        logging_steps = 1,\n",
     "        optim = \"adamw_8bit\",\n",
-    "        weight_decay = 0.03,\n",
     "        lr_scheduler_type = \"linear\",\n",
     "        seed = 3407,\n",
     "        output_dir = \"outputs\",\n",
