--- a/022_LargeLanguageModels/SFT_bhisblogs_alpaca.ipynb
+++ b/022_LargeLanguageModels/SFT_bhisblogs_alpaca.ipynb
@@ -44,7 +44,7 @@
     "os.environ['HF_TOKEN'] = HF_APIKEY\n",
     "\n",
     "model, tokenizer = unsloth.FastLanguageModel.from_pretrained(\n",
-    "    model_name = \"joffthyer/alpaca-llama3\",\n",
+    "    model_name = \"joffthyer/l3-alpaca\",\n",
     "    max_seq_length = max_seq_length,\n",
     "    dtype = None, load_in_4bit = True\n",
     ")"
