--- a/022_LargeLanguageModels/SFT_bhisblogs_infotech_improved.ipynb
+++ b/022_LargeLanguageModels/SFT_bhisblogs_infotech_improved.ipynb
@@ -143,20 +143,33 @@
    "source": [
     "from trl import SFTTrainer\n",
     "from transformers import TrainingArguments\n",
+    "from transformers import TrainerCallback\n",
     "from unsloth import is_bfloat16_supported\n",
+    "\n",
+    "class StopOnLoss(TrainerCallback):\n",
+    "    def __init__(self, threshold: float):\n",
+    "        self.threshold = threshold\n",
+    "\n",
+    "    def on_step_end(self, args, state, control, **kwargs):\n",
+    "        if state.log_history and 'loss' in state.log_history[-1]:\n",
+    "            current_loss = state.log_history[-1]['loss']\n",
+    "            if current_loss <= self.threshold:\n",
+    "                print(f\"Stopping early as loss {current_loss:.4f} <= threshold {self.threshold:.4f}\")\n",
+    "                control.should_training_stop = True\n",
     "\n",
     "newmodel = model\n",
     "trainer = SFTTrainer(\n",
     "    model = model,\n",
     "    processing_class = tokenizer,\n",
     "    train_dataset = ds,\n",
+    "    callbacks = [StopOnLoss(1.0)],       ## Set your loss threshold here\n",
     "    args = TrainingArguments(\n",
     "        ## hyper-params we usually can tune\n",
     "        learning_rate = 2e-4,             ## between 1e-4 and 5e-4\n",
     "        per_device_train_batch_size = 4,  ## 2, 4, or 8\n",
     "        gradient_accumulation_steps = 8,  ## 4 up to 8\n",
     "        num_train_epochs = 1,             ## max_steps overrides this\n",
-    "        max_steps = 50,                   ## single Epoch / 50 steps or more\n",
+    "        #max_steps = 150,                   ## single Epoch / 50 steps or more\n",
     "        weight_decay = 0.01,              ## 0.01 is conservative and good for not overfitting\n",
     "\n",
     "        ## params below are typically not modified\n",
